[package]
name = "amd-flash"
version = "0.2.1"
authors = ["dannym"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
static_assertions = "1.1"
thiserror = { version = "1.0.38", optional = true }

[features]
default = []
std = ["thiserror"]
